robust-setup/ingress/ingress-clusterip.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-clusterip
spec:
  ingressClassName: nginx
  rules:
  - host: nginx-clusterip.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-clusterip
            port:
              number: 80
