robust-setup/ingress/ingress-lb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-loadbalancer
spec:
  rules:
  - host: nginx-loadbalancer.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-loadbalancer
            port:
              number: 80
